--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
+    "styled-components": "^5.3.9",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
