--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.9",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
